code/sadbeep/sadbeep/sadbeepParser.py
# Generated from /home/marcos/PycharmProjects/INE5622-Compiler/code/sadbeep/sadbeep/sadbeep.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class sadbeepParser ( Parser ):

    grammarFileName = "sadbeep.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'('", "')'", "'return'", 
                     "'-'", "'if'", "'&&'", "'||'", "'else'", "'while'", 
                     "'for'", "'switch'", "'{'", "'}'", "'func'", "'case'", 
                     "':'", "'break;'", "'>'", "'<'", "'>='", "'<='", "'=='", 
                     "'!='", "'+'", "'*'", "'/'", "'%'", "'input'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "COMMENT", 
                      "LINE_COMMENT", "NUMBER", "INT", "FLOAT", "TRUE", 
                      "FALSE", "BOOL", "STRING", "WS", "DOT", "COMMA" ]

    RULE_parse = 0
    RULE_expr = 1
    RULE_operators = 2
    RULE_number = 3
    RULE_variable = 4
    RULE_function_def = 5
    RULE_args = 6
    RULE_cases = 7
    RULE_block = 8
    RULE_call = 9
    RULE_exprs = 10
    RULE_forexpr = 11
    RULE_exp = 12
    RULE_summ = 13
    RULE_mult = 14
    RULE_atom = 15

    ruleNames =  [ "parse", "expr", "operators", "number", "variable", "function_def", 
                   "args", "cases", "block", "call", "exprs", "forexpr", 
                   "exp", "summ", "mult", "atom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    ID=31
    COMMENT=32
    LINE_COMMENT=33
    NUMBER=34
    INT=35
    FLOAT=36
    TRUE=37
    FALSE=38
    BOOL=39
    STRING=40
    WS=41
    DOT=42
    COMMA=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(sadbeepParser.EOF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sadbeepParser.ExprContext)
            else:
                return self.getTypedRuleContext(sadbeepParser.ExprContext,i)


        def getRuleIndex(self):
            return sadbeepParser.RULE_parse

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = sadbeepParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sadbeepParser.T__2) | (1 << sadbeepParser.T__4) | (1 << sadbeepParser.T__5) | (1 << sadbeepParser.T__6) | (1 << sadbeepParser.T__8) | (1 << sadbeepParser.T__10) | (1 << sadbeepParser.T__11) | (1 << sadbeepParser.T__12) | (1 << sadbeepParser.T__13) | (1 << sadbeepParser.T__15) | (1 << sadbeepParser.T__29) | (1 << sadbeepParser.ID) | (1 << sadbeepParser.NUMBER) | (1 << sadbeepParser.BOOL) | (1 << sadbeepParser.STRING))) != 0):
                self.state = 32
                self.expr(0)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(sadbeepParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cond = None # ExprContext
            self.then = None # BlockContext
            self.otherwise = None # BlockContext

        def variable(self):
            return self.getTypedRuleContext(sadbeepParser.VariableContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sadbeepParser.ExprContext)
            else:
                return self.getTypedRuleContext(sadbeepParser.ExprContext,i)


        def number(self):
            return self.getTypedRuleContext(sadbeepParser.NumberContext,0)


        def function_def(self):
            return self.getTypedRuleContext(sadbeepParser.Function_defContext,0)


        def STRING(self):
            return self.getToken(sadbeepParser.STRING, 0)

        def ID(self):
            return self.getToken(sadbeepParser.ID, 0)

        def call(self):
            return self.getTypedRuleContext(sadbeepParser.CallContext,0)


        def exp(self):
            return self.getTypedRuleContext(sadbeepParser.ExpContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sadbeepParser.BlockContext)
            else:
                return self.getTypedRuleContext(sadbeepParser.BlockContext,i)


        def forexpr(self):
            return self.getTypedRuleContext(sadbeepParser.ForexprContext,0)


        def cases(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sadbeepParser.CasesContext)
            else:
                return self.getTypedRuleContext(sadbeepParser.CasesContext,i)


        def operators(self):
            return self.getTypedRuleContext(sadbeepParser.OperatorsContext,0)


        def getRuleIndex(self):
            return sadbeepParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = sadbeepParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 41
                self.variable()
                self.state = 42
                self.match(sadbeepParser.T__0)
                self.state = 43
                self.expr(0)
                self.state = 44
                self.match(sadbeepParser.T__1)
                pass

            elif la_ == 2:
                self.state = 46
                self.number()
                pass

            elif la_ == 3:
                self.state = 47
                self.function_def()
                pass

            elif la_ == 4:
                self.state = 48
                self.match(sadbeepParser.T__2)
                self.state = 49
                self.expr(0)
                self.state = 50
                self.match(sadbeepParser.T__3)
                pass

            elif la_ == 5:
                self.state = 52
                self.match(sadbeepParser.STRING)
                pass

            elif la_ == 6:
                self.state = 53
                self.match(sadbeepParser.T__4)
                self.state = 54
                self.expr(0)
                self.state = 55
                self.match(sadbeepParser.T__1)
                pass

            elif la_ == 7:
                self.state = 57
                self.match(sadbeepParser.ID)
                pass

            elif la_ == 8:
                self.state = 58
                self.call()
                pass

            elif la_ == 9:
                self.state = 60
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 59
                    self.match(sadbeepParser.T__5)


                self.state = 62
                self.exp()
                pass

            elif la_ == 10:
                self.state = 63
                self.match(sadbeepParser.T__6)
                self.state = 64
                localctx.cond = self.expr(0)
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 65
                        self.match(sadbeepParser.T__7)
                        self.state = 66
                        localctx.cond = self.expr(0) 
                    self.state = 71
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                pass

            elif la_ == 11:
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==sadbeepParser.T__8:
                    self.state = 72
                    self.match(sadbeepParser.T__8)
                    self.state = 73
                    localctx.cond = self.expr(0)
                    self.state = 78
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 79
                localctx.then = self.block()
                self.state = 82
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 80
                    self.match(sadbeepParser.T__9)
                    self.state = 81
                    localctx.otherwise = self.block()


                pass

            elif la_ == 12:
                self.state = 84
                self.match(sadbeepParser.T__10)
                self.state = 85
                localctx.cond = self.expr(0)
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 86
                        self.match(sadbeepParser.T__7)
                        self.state = 87
                        localctx.cond = self.expr(0) 
                    self.state = 92
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass

            elif la_ == 13:
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==sadbeepParser.T__8:
                    self.state = 93
                    self.match(sadbeepParser.T__8)
                    self.state = 94
                    localctx.cond = self.expr(0)
                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 100
                self.block()
                pass

            elif la_ == 14:
                self.state = 101
                self.match(sadbeepParser.T__11)
                self.state = 102
                self.forexpr()
                self.state = 103
                self.block()
                pass

            elif la_ == 15:
                self.state = 105
                self.match(sadbeepParser.T__12)
                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 106
                    self.expr(0)


                self.state = 109
                self.match(sadbeepParser.T__13)
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 110
                    self.cases()
                    self.state = 113 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==sadbeepParser.T__16):
                        break

                self.state = 115
                self.match(sadbeepParser.T__14)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 125
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = sadbeepParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 119
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 120
                        self.expr(15)
                        pass

                    elif la_ == 2:
                        localctx = sadbeepParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 121
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 122
                        self.operators()
                        self.state = 123
                        self.match(sadbeepParser.T__1)
                        pass

             
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class OperatorsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mult(self):
            return self.getTypedRuleContext(sadbeepParser.MultContext,0)


        def summ(self):
            return self.getTypedRuleContext(sadbeepParser.SummContext,0)


        def getRuleIndex(self):
            return sadbeepParser.RULE_operators

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperators" ):
                return visitor.visitOperators(self)
            else:
                return visitor.visitChildren(self)




    def operators(self):

        localctx = sadbeepParser.OperatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_operators)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.mult()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.summ()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(sadbeepParser.NUMBER, 0)

        def getRuleIndex(self):
            return sadbeepParser.RULE_number

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = sadbeepParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(sadbeepParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sadbeepParser.ID, 0)

        def getRuleIndex(self):
            return sadbeepParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = sadbeepParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(sadbeepParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def block(self):
            return self.getTypedRuleContext(sadbeepParser.BlockContext,0)


        def ID(self):
            return self.getToken(sadbeepParser.ID, 0)

        def args(self):
            return self.getTypedRuleContext(sadbeepParser.ArgsContext,0)


        def getRuleIndex(self):
            return sadbeepParser.RULE_function_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_def" ):
                return visitor.visitFunction_def(self)
            else:
                return visitor.visitChildren(self)




    def function_def(self):

        localctx = sadbeepParser.Function_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(sadbeepParser.T__15)
            self.state = 139
            localctx.name = self.match(sadbeepParser.ID)
            self.state = 140
            self.match(sadbeepParser.T__2)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sadbeepParser.ID:
                self.state = 141
                self.args()


            self.state = 144
            self.match(sadbeepParser.T__3)
            self.state = 145
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(sadbeepParser.ID)
            else:
                return self.getToken(sadbeepParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(sadbeepParser.COMMA)
            else:
                return self.getToken(sadbeepParser.COMMA, i)

        def getRuleIndex(self):
            return sadbeepParser.RULE_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = sadbeepParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(sadbeepParser.ID)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==sadbeepParser.COMMA:
                self.state = 148
                self.match(sadbeepParser.COMMA)
                self.state = 149
                self.match(sadbeepParser.ID)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CasesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sadbeepParser.ExprContext)
            else:
                return self.getTypedRuleContext(sadbeepParser.ExprContext,i)


        def getRuleIndex(self):
            return sadbeepParser.RULE_cases

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCases" ):
                return visitor.visitCases(self)
            else:
                return visitor.visitChildren(self)




    def cases(self):

        localctx = sadbeepParser.CasesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cases)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(sadbeepParser.T__16)
            self.state = 156
            self.expr(0)
            self.state = 157
            self.match(sadbeepParser.T__17)
            self.state = 158
            self.expr(0)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sadbeepParser.T__18:
                self.state = 159
                self.match(sadbeepParser.T__18)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sadbeepParser.ExprContext)
            else:
                return self.getTypedRuleContext(sadbeepParser.ExprContext,i)


        def getRuleIndex(self):
            return sadbeepParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = sadbeepParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(sadbeepParser.T__13)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sadbeepParser.T__2) | (1 << sadbeepParser.T__4) | (1 << sadbeepParser.T__5) | (1 << sadbeepParser.T__6) | (1 << sadbeepParser.T__8) | (1 << sadbeepParser.T__10) | (1 << sadbeepParser.T__11) | (1 << sadbeepParser.T__12) | (1 << sadbeepParser.T__13) | (1 << sadbeepParser.T__15) | (1 << sadbeepParser.T__29) | (1 << sadbeepParser.ID) | (1 << sadbeepParser.NUMBER) | (1 << sadbeepParser.BOOL) | (1 << sadbeepParser.STRING))) != 0):
                self.state = 163
                self.expr(0)
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self.match(sadbeepParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(sadbeepParser.ID, 0)

        def exprs(self):
            return self.getTypedRuleContext(sadbeepParser.ExprsContext,0)


        def getRuleIndex(self):
            return sadbeepParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = sadbeepParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            localctx.name = self.match(sadbeepParser.ID)
            self.state = 172
            self.match(sadbeepParser.T__2)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sadbeepParser.T__2) | (1 << sadbeepParser.T__4) | (1 << sadbeepParser.T__5) | (1 << sadbeepParser.T__6) | (1 << sadbeepParser.T__8) | (1 << sadbeepParser.T__10) | (1 << sadbeepParser.T__11) | (1 << sadbeepParser.T__12) | (1 << sadbeepParser.T__13) | (1 << sadbeepParser.T__15) | (1 << sadbeepParser.T__29) | (1 << sadbeepParser.ID) | (1 << sadbeepParser.NUMBER) | (1 << sadbeepParser.BOOL) | (1 << sadbeepParser.STRING))) != 0):
                self.state = 173
                self.exprs()


            self.state = 176
            self.match(sadbeepParser.T__3)
            self.state = 177
            self.match(sadbeepParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sadbeepParser.ExprContext)
            else:
                return self.getTypedRuleContext(sadbeepParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(sadbeepParser.COMMA)
            else:
                return self.getToken(sadbeepParser.COMMA, i)

        def getRuleIndex(self):
            return sadbeepParser.RULE_exprs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprs" ):
                return visitor.visitExprs(self)
            else:
                return visitor.visitChildren(self)




    def exprs(self):

        localctx = sadbeepParser.ExprsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exprs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.expr(0)
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==sadbeepParser.COMMA:
                self.state = 180
                self.match(sadbeepParser.COMMA)
                self.state = 181
                self.expr(0)
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cond = None # ExprContext

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sadbeepParser.VariableContext)
            else:
                return self.getTypedRuleContext(sadbeepParser.VariableContext,i)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sadbeepParser.ExprContext)
            else:
                return self.getTypedRuleContext(sadbeepParser.ExprContext,i)


        def getRuleIndex(self):
            return sadbeepParser.RULE_forexpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForexpr" ):
                return visitor.visitForexpr(self)
            else:
                return visitor.visitChildren(self)




    def forexpr(self):

        localctx = sadbeepParser.ForexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_forexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(sadbeepParser.T__2)
            self.state = 188
            self.variable()
            self.state = 189
            self.match(sadbeepParser.T__0)
            self.state = 190
            self.expr(0)
            self.state = 191
            self.match(sadbeepParser.T__1)
            self.state = 192
            localctx.cond = self.expr(0)
            self.state = 193
            self.match(sadbeepParser.T__1)
            self.state = 194
            self.variable()
            self.state = 195
            self.match(sadbeepParser.T__0)
            self.state = 196
            self.expr(0)
            self.state = 197
            self.match(sadbeepParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # SummContext
            self.op = None # Token
            self.right = None # ExpContext

        def summ(self):
            return self.getTypedRuleContext(sadbeepParser.SummContext,0)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sadbeepParser.ExpContext)
            else:
                return self.getTypedRuleContext(sadbeepParser.ExpContext,i)


        def getRuleIndex(self):
            return sadbeepParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = sadbeepParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            localctx.left = self.summ()
            self.state = 204
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 200
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sadbeepParser.T__19) | (1 << sadbeepParser.T__20) | (1 << sadbeepParser.T__21) | (1 << sadbeepParser.T__22) | (1 << sadbeepParser.T__23) | (1 << sadbeepParser.T__24))) != 0)):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 201
                    localctx.right = self.exp() 
                self.state = 206
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
